--- a/index.html
+++ b/index.html
@@ -204,7 +204,12 @@
       {
         src: 'https://cdn.discordapp.com/attachments/1346464321332449301/1430914443251814500/IMG_20250918_195204_286.jpg',
         caption: 'น่ารักมากมากกกกกกกกกก'
-      }
+      },
+      { 
+        src 'https://media.discordapp.net/attachments/1346464321332449301/1430914444506038342/IMG_20250913_144705_741.jpg?ex=68fb826c&is=68fa30ec&hm=7ad400b89c7b47f5469728a9185db11283503ef3abf202183a4179dfac74e031&=&format=webp&width=476&height=635'
+        caption: 'แฟนเค้าน่ารักที่สุดเรยย'
+      },
+      {  
     ];
 
     const giftBox = document.getElementById('giftBox');
@@ -340,3 +345,4 @@
   </script>
 </body>
 </html>
+
